--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "react-navigation-tabs": "^2.5.5"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.0.0"
+    "babel-preset-expo": "^7.0.0",
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.15.1",
+    "prettier": "1.18.2"
   },
   "private": true
 }
