--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "^35.0.0",
-    "firebase": "^7.1.0",
     "expo-location": "~7.0.0",
+    "expo-permissions": "~7.0.0",
+    "firebase": "^7.2.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-maps": "^0.25.0",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.8.0",
-    "react-navigation-tabs": "^2.5.5",
-    "expo-permissions": "~7.0.0"
+    "react-navigation-tabs": "^2.5.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
@@ -35,18 +34,5 @@
     "eslint-plugin-react-hooks": "^2.1.2",
     "prettier": "1.18.2"
   },
-  "private": true,
-  "name": "hotspots",
-  "description": "[![Build Status](https://travis-ci.org/ChicoState/HotSpots.svg?branch=master)](https://travis-ci.org/ChicoState/HotSpots)",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jsage1/HotSpots.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jsage1/HotSpots/issues"
-  },
-  "homepage": "https://github.com/jsage1/HotSpots#readme"
+  "private": true
 }
