--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "expo-location": "~7.0.0",
+    "expo-permissions": "~7.0.0",
     "firebase": "^7.2.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -22,8 +23,7 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.8.0",
-    "react-navigation-tabs": "^2.5.5",
-    "expo-permissions": "~7.0.0"
+    "react-navigation-tabs": "^2.5.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
