--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-location": "~7.0.0",
     "expo-permissions": "~7.0.0",
     "firebase": "^7.2.1",
+    "node-gyp": "^6.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
