--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 ---
 language: node_js
 node_js:
-  - 10.16.3
+  - lts/*
 cache:
   directories:
     - ~/.npm
     - .jest
 before_script:
-  - npm install -g npm@6.11.3
+  - npm install -g npm@latest
 script:
   - npm ci
   - npx jest --ci --passWithNoTests
