--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -14,8 +18,8 @@
     "expo-permissions": "~7.0.0",
     "firebase": "^7.2.1",
     "ionicons": "^4.6.3",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-google-maps-directions": "^2.1.1",
@@ -32,14 +36,18 @@
     "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^9.3.3",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-preset-expo": "^7.1.0",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
-    "prettier": "1.18.2"
+    "jest": "^24.9.0",
+    "prettier": "1.18.2",
+    "react-test-renderer": "^16.9.0"
   },
   "private": true
 }
