--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --forceExit"
-  },
-  "jest": {
-    "preset": "react-native"
+    "test": "jest --coverage --forceExit"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -46,8 +43,15 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "jest": "^24.9.0",
+    "jest-expo": "^36.0.1",
     "prettier": "1.18.2",
     "react-test-renderer": "^16.9.0"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|sentry-expo|native-base)"
+    ]
   },
   "private": true
 }
