--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 ---
 language: node_js
+
 node_js:
-  - lts/*
-cache:
-  directories:
-    - ~/.npm
-    - .jest
-before_script:
-  - npm install -g npm@latest
-script:
+  - 10.16.3
+
+install:
   - npm ci
-  - npx jest --ci --passWithNoTests
+
+script:
+  - npm test
